operator/aws-alb-terraform/gateway-template.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
 name: "${ name }"
 namespace: kong-gateways
spec:
 gatewayClassName: "${ name }"
 listeners:
 - name: http
   protocol: HTTP
   port: 80
